<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6.5"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/WhiteThree">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/judul_activity_login"
            android:textColor="@color/Black"
            android:fontFamily="@font/nunito_bold"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/deskripsi_judul_activity_login"
            android:textColor="@color/Black3"
            android:fontFamily="@font/nunito_bold"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:text="@string/kode_keluarga"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:inputType="text"
            android:maxLength="6"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:text="@string/syarat_ketentuan"
            android:textColor="@color/Black3" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:text="@string/tidak_ada_kode"
            android:textColor="@color/BrownGrey"
            android:textSize="15sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background2"
            android:text="@string/beli_kode"
            android:textColor="@color/WhiteThree"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>