<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:weightSum="4"
    tools:context=".BiodataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.5"
        android:orientation="vertical"
        android:background="@color/WhiteThree">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="25sp"
            android:text="@string/nama_panggilan"
            android:textColor="@color/Black"/>

        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_nama"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="25sp"
            android:text="@string/umur"
            android:textColor="@color/Black"/>

        <EditText
            android:id="@+id/editTextUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_umur"
            android:inputType="number"
            android:importantForAutofill="no" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center">

        <Button
            android:id="@+id/buttonBiodata"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/selanjutnya"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>